--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Coiny', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ff0000;
+    background-color: #A8000D;
 }
 
 header {
@@ -65,39 +65,40 @@ header .nav-links {
 }
 
 canvas {
-    position: fixed;
+    position: absolute;
+    top: 600px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+}
+
+#container canvas {
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
-}
-
-#container canvas {
-    position: relative;
-    top: -300px;
-    left: 0;
-    width: 120%;
-    height: 100%;
-    z-index: -2;
-    margin-left: -40px;
+    margin-left: -0px;
+    background-color: white;
 }
 
 .home {
     position: relative;
-    top: -700px;
+    top: 200px;
     left: 0;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 800px;
+    margin-bottom: 1200px;
 }
 
 .home h1 {
     font-size: 120px;
-    font-weight: 200;
+    font-weight: 400;
     letter-spacing: 1px;
     line-height: 1.5;
     color: rgb(255, 255, 255);
