--- a/styles.css
+++ b/styles.css
@@ -65,35 +65,24 @@ header .nav-links {
 }
 
 canvas {
-    position: absolute;
-    top: 600px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-}
-
-#container canvas {
-    position: relative;
-    top: 0;
+    position: fixed;
+    top: 200px;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
-    margin-left: -0px;
-    background-color: white;
 }
 
 .home {
     position: relative;
-    top: 200px;
+    margin-top: 300px;
     left: 0;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 1200px;
+    margin-bottom: 200px;
 }
 
 .home h1 {
@@ -154,6 +143,71 @@ canvas {
     z-index: 1;
     text-align: center;
     margin-top: -8%;
+}
+
+.about {
+    text-align: left;
+    padding-left: 120px;
+    margin-bottom: 200px;
+}
+
+.about .content {
+    display: inline-block;
+    text-align: left;
+    color: white;
+    max-width: 600px;
+}
+
+.about h1 {
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+.about p {
+    font-size: 16px;
+    word-wrap: break-word;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 200px;
+}
+
+.projects h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.project-card {
+    min-width: 300px;
+    max-width: 800px;
+    margin: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+}
+
+.project-info {
+    padding: 20px;
+    max-width: 400px;
+}
+
+.project-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-image img {
+    padding: 20px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 30px;
 }
 
 aside {
