--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,7 @@ canvas {
 .project-card {
     min-width: 300px;
     max-width: 800px;
+    min-height: 400px;
     margin: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -200,6 +201,7 @@ canvas {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .project-image img {
@@ -209,6 +211,91 @@ canvas {
     object-fit: cover;
     border-radius: 30px;
 }
+
+.project-image video {
+    padding: 20px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 25px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    padding-bottom: 40px;
+}
+
+.dot {
+    height: 10px;
+    width: 10px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.active {
+    background-color: #333;
+}
+
+.gallery {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+.gallery img {
+    padding: 5px;
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    display: block;
+    max-width: 90%;
+    max-height: 90%;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 aside {
     position: fixed;
