--- a/styles.css
+++ b/styles.css
@@ -169,93 +169,6 @@ canvas {
     word-wrap: break-word;
 }
 
-.projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 200px;
-}
-
-.projects h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.project-card {
-    min-width: 300px;
-    max-width: 800px;
-    min-height: 400px;
-    margin: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    display: flex;
-}
-
-.project-info {
-    padding: 20px;
-    max-width: 400px;
-}
-
-.project-image {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.project-image img {
-    padding: 20px;
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    border-radius: 30px;
-}
-
-.project-image video {
-    padding: 20px;
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-}
-
-.button-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    padding-bottom: 40px;
-}
-
-.dot {
-    height: 10px;
-    width: 10px;
-    margin: 0 5px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-}
-
-.active {
-    background-color: #333;
-}
-
-.gallery {
-    display: none;
-    margin-top: 20px;
-    padding: 20px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-}
-
-.gallery img {
-    padding: 5px;
-    width: 100%;
-    height: auto;
-    border-radius: 15px;
-}
-
 .modal {
     display: none;
     position: fixed;
@@ -365,3 +278,33 @@ footer p {
     border-bottom: 2px solid transparent;
     transition: all 0.55s ease;
 }
+
+
+.flexing {
+    background: #efefef00;
+   margin-bottom: 200px;
+   margin-left: 100px;
+   margin-right: 100px;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 500px;
+    max-width: 100%;
+  }
+ img{
+   width: 100%;
+   height: 100%;
+ }
+ .flex, .flex2{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+ }
+
+ .flexing .flex2 h2,p{
+    text-align: right;  
+ }
+
+ .flexing .flex p{
+    text-align: left;
+ }
